syntax = "proto3";

package api;
option go_package = "/api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/empty.proto";

message RestoreBackupRequest {
  string name = 1;
}

message GetBackupListResult {
  repeated string items = 1;
}

service BackupService {

  // new backup
  rpc NewBackup (google.protobuf.Empty) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/backup"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // restore backup
  rpc RestoreBackup (RestoreBackupRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      put: "/v1/backup/restore"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get backup list
  rpc GetBackupList (google.protobuf.Empty) returns (GetBackupListResult){
    option (google.api.http) = {
      get: "/v1/backups"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

}
